# EncryptedGram

./: .gitignore  README.md  dep.txt  lib.py  main.py  pyproject.toml
telegram_encryption/: lib.py  main.py
